# jsonl-log-auditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  schema.json
.github/workflows/: ci.yml
baselines/: baseline.json
docs/: determinism.md  query-language.md  schema-subset.md
logs/: sample_app.jsonl  sample_bad.jsonl
src/logaudit/: __init__.py  cli.py  parse.py  percentile.py  query.py  records.py  redact.py  regress.py  report.py  schema.py  util.py
tests/: test_cli.py  test_parse.py  test_percentile.py  test_query.py  test_redact.py  test_regress.py  test_report.py  test_schema.py
tests/data/: app.logfmt  small.jsonl
tools/: gen_logs.py
